descomplicando-kubernetes/day-14/pod.yaml
apiVersion: v1 
kind: Pod
metadata: 
  labels:
    app: nginx
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: 128Mi
        cpu: "2.0"
