descomplicando-kubernetes/day-14/add-label-namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-label-namespace
spec:
  rules: 
  - name: add-label-ns 
    match:
      resources: 
        kinds:
        - Namespace 
    mutate:
      patchStrategicMerge: #estratégica de merge de modificações, vai adicionar o label no namespace
        metadata: 
          labels: 
            Rodrigo: "Lindao_Demais"
