descomplicando-kubernetes/day-14/require-resources-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy 
metadata:
  name: require-resources-limits
spec:
  validationFailureAction: Enforce #ação a ser tomada é aplicar a restrição e bloquear a operação
  rules:
  - name: validate-limits
    match:     #faça match com os recursos abaixos
      resources:
        kinds: #tipo de resources que será feito o match
        - Pod
    validate:
      message: "Precisa definir o limite de recursos"
      pattern: #padrão que espera para bater com a regra
        spec:
          containers:
          - name: "*" #todos os containers
            resources:
              limits: 
                memory: "?*" #pra ser qualquer valor "?*" mas que exita uma definição do memory
                cpu: "?*"    #pra ser qualquer valor "?*" mas que exita uma definição do cpu
